--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BookStoreDBConnectionString" connectionString="Provider=SQLNCLI11;Data Source=DUYKHANH\DUYKHANH;Password=sa;User ID=sa;Initial Catalog=BookStoreDB"
-      providerName="System.Data.OleDb" />
+    <add name="BookStoreDBConnectionString"
+		 connectionString="Data Source=DUYKHANH\DUYKHANH;Password=sa;User ID=sa;Initial Catalog=BookStoreDB"
+      providerName="System.Data.sqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -18,4 +19,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+	<system.web>
+		<sessionState mode="InProc" timeout="30" />
+	</system.web>
 </configuration>
