--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
     <connectionStrings>
-        <add name="BookStoreDBConnectionString" connectionString="Data Source=DUYKHANH\DUYKHANH;Password=sa;User ID=sa;
+        <add name="BookStoreDBConnectionString" connectionString="Data Source=PC226;Password=sa;User ID=sa;
                          TrustServerCertificate=True; Initial Catalog=BookStoreDB" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.web>
